tests/simple/src/bad/null-deref_write-nullptr.cpp
#include <stdio.h>

int main() {
  int *ptr = nullptr;

  *ptr = 0xdeadbeef;
  return 0;
}
